--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -18,6 +19,7 @@ html {
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -330,7 +332,7 @@ html {
   color: #E8EAE6;
   text-align: center;
 }
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 780px) {
   .footer-container {
     flex-direction: column;
     align-items: center;
