--- a/scss/componentes/header.scss
+++ b/scss/componentes/header.scss
@@ -18,7 +18,7 @@
 
         @keyframes titulo {
             0% {
-                color: #EE5007;
+                color: #b42f98;
             }
 
             25% {
@@ -59,8 +59,9 @@
 
     .nav-link {
         font-weight: nth($font-weight, 1 );
-        color: nth($colores, 1 );
-        font-size: nth($font-size , 2);
+        color: nth($colores, 5 );
+        font-size: nth($font-size , 1);
+        text-transform: uppercase;
         
         &:hover{
             color: nth($colores, 5 );
