--- a/scss/componentes/sectionCuero.scss
+++ b/scss/componentes/sectionCuero.scss
@@ -1,3 +1,6 @@
+@import'../base/listas';
+
+
 .info-texto {
     display: flex;
     justify-content: center;
@@ -32,29 +35,28 @@
     padding: 50px;
     text-align: center;
     background-color: nth($bg-color, 4 );
-    @media only screen and (max-width:780px) {
-        background-color: nth($bg-color, 6 );
-        color: nth($colores,1 );
-        width: 400px;
-        height: 350px;
-        background-color: nth($bg-color, 2 );
-        }
-    &:hover{
-        background-color: nth($bg-color, 2 );
-        
+   
+        @media only screen and (max-width:780px) {
+            background-color: nth($bg-color, 2 );
+            width: 400px;
+            height: 350px;
+            
+            }
+       
     }
      
+
    
 
     
-}
+
 .encabezado-cueros{
      color: nth($colores, 6);
      font-size: 3rem;
      font-weight: nth($font-weight, 3);
      font-family: 'Poppins', sans-serif;
      @media only screen and (max-width:780px) {
-         color: nth($colores,1 );
+         color: nth($colores,6s );
        
         }
 }
@@ -64,9 +66,13 @@
     font-weight: nth($font-weight, 2 );
     color: nth($colores, 3 );
     font-size: 2rem;
+
+    &:hover{
+        color: nth($colores, 5 );
+    }
     @media only screen and (max-width:780px) {
         
-        color: nth($colores,1 );
+        color: nth($colores,6 );
        
        
         }
