--- a/scss/base/_listas.scss
+++ b/scss/base/_listas.scss
@@ -1,5 +1,4 @@
-
-$colores:
+$colores: 
 #0b0606,
 #A2B38B,
 #D0C9C0,
@@ -13,8 +12,7 @@ $colores:
 
 #F0ECE3;
 
-$bg-color:
-rgba(0, 0, 0, 0.284),
+$bg-color: rgba(0, 0, 0, 0.284),
 rgb(166, 137, 137),
 rgba(0, 0, 0, 0.26),
 #0f0e0ec1,
@@ -24,15 +22,14 @@ rgba(247, 205, 172, 0.504),
 #e8eae669,
 #CC9C75;
 
-$font-size:
-1.5rem,
+$font-size: 1.5rem,
 1.8rem,
 2rem,
 2.5rem,
 3rem,
 4rem;
 
-$font-weight:
+$font-weight: 
 500,
 600,
 700,
