--- a/scss/componentes/header.scss
+++ b/scss/componentes/header.scss
@@ -51,6 +51,7 @@
         color: nth($colores, 1);
         font-size: nth($font-size, 6);
         font-weight: nth($font-weight, 4);
+        text-transform: uppercase;
     }
 
 }
