--- a/css/style.css
+++ b/css/style.css
@@ -403,6 +403,11 @@ html {
   bottom: 0;
   right: 150px;
 }
+@media only screen and (max-width: 780px) {
+  .tel {
+    right: 50px;
+  }
+}
 
 .hero-img {
   display: flex;
